--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,29 +1,31 @@
-*{
+* {
     font-family: 'Work Sans', sans-serif;
 }
 
 .header {
     /* margin: 0px auto; */
-    /* width: 100%; */
+    width: 100%;
     background-color: rgba(255, 144, 14, 0.1);
     display: flex;
+    justify-content: center;
     flex-direction: column;
-    /* margin: 0 auto;
-    align-items: center;
-     */
+    /* align-items: center; */
+
 }
 
 .header-title-nav {
-    border: 1px solid red;
+
     display: flex;
     justify-content: space-around;
+
     align-items: center;
-    width: 100%;
+    /* width: 100%; */
 
 }
 
 .header-title {
-    width: 50%;
+    /* width: 50%; */
+    font-style: normal;
     /* height: 50%; */
     font-weight: 700;
     font-size: 45px;
@@ -31,20 +33,32 @@
 }
 
 .nav-bar {
+    /* width: 50%; */
+
+    border: 1px solid red;
+    /* font-weight: 500;
+    font-size: 18px;
+    line-height: 26px; */
+    /* text-align: center; */
+
 
     /* width: 50%; */
 }
 
-.header-title-nav .nav-bar ul {
+.nav-bar ul {
     border: 1px solid gray;
-    width: 100%;
+    width: stretch;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
 }
 
 .nav-title {
+    /* font-family: 'Work Sans'; */
+    /* font-style: normal; */
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 26px;
     display: flex;
+    margin-left: 70px;
     font-weight: 500;
     font-size: 18px;
     text-align: center;
@@ -53,7 +67,6 @@
 
 .banner {
 
-    border: 1px solid red;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -66,22 +79,13 @@
 Banner title
 -----------------*/
 .banner-title {
-    width: 862px;
-    height: 225px;
-    /* width: 70%; */
-    /* display: flex;
-    flex-direction: co; */
     font-weight: 700;
     font-size: 64px;
-    line-height: 75px;
     text-align: center;
     font-weight: 700;
     color: #131313;
-    margin-bottom: 174px;
-    /* text-align: center; */
-    /* width: 100%;
-    height: 225px; */
-    z-index: 3;
+    margin-bottom: 100px;
+
 }
 
 /*--------------------
@@ -91,11 +95,11 @@ banner paragraph
     width: 868px;
     height: 52px;
     font-weight: 400;
-    font-size: 16px;
+    font-size: 26px;
     line-height: 26px;
     text-align: center;
     color: #727272;
-    margin-bottom: 32px;
+    margin-bottom: 100px;
 }
 
 /*--------------------
@@ -103,13 +107,13 @@ banner button
 -------------------*/
 .primary-button {
     border: 0;
-    width: 180px;
+    width: 200px;
     height: 64px;
     background: #FF900E;
     border-radius: 8px;
     font-weight: 600;
     font-size: 20px;
-    line-height: 23px;
+    /* line-height: 23px; */
     text-align: center;
     padding: 20px 25px;
     color: #FFFFFF;
@@ -119,7 +123,571 @@ banner button
 /*------------------- 
 banner-image 
 --------------------*/
-.banner-image{
-    /* width: 80%; */
-    /* align-self: stretch; */
+.banner-image {
+    /* display: flex; */
+    /* justify-content: space-around; */
+}
+
+/*---------------------- 
+Features section 
+----------------------*/
+.features {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
+}
+
+.features-images {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    margin-right: 80px;
+}
+
+.features-description {
+    display: flex;
+    flex-direction: column;
+
+    /* justify-content: space-between; */
+    /* align-items: flex-end; */
+}
+
+.features-title {
+    font-weight: 500;
+    font-size: 45px;
+    color: #727272;
+    margin-bottom: 25px;
+}
+
+/*------------------ 
+Features info 
+------------------*/
+.features-info {
+    border: 1px solid orange;
+    width: 540px;
+    height: 80px;
+    font-weight: 400;
+    font-size: 16px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    color: #727272;
+}
+
+
+
+/*------------------------------------------- 
+Styling Love And Enjoy Section 
+--------------------------------------------*/
+
+/*--------------------- 
+Love-enjoy section 
+---------------------*/
+.love-enjoy-main {
+    display: flex;
+    margin-top: 130px;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
+    margin-bottom: 130px;
+}
+
+/*-------------- 
+love-enjoy 
+--------------*/
+.love-enjoy {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.love-enjoy-info {
+    display: flex;
+    flex-direction: column;
+    /* justify-content: start; */
+    align-items: flex-start;
+
+
+}
+
+.love-enjoy-title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 24px;
+}
+
+.orange-box {
+    width: 7px;
+    height: 106px;
+    background: #FF900E;
+}
+
+.love-enjoy-features-title {
+    width: 468px;
+    height: 106px;
+    font-weight: 700;
+    font-size: 45px;
+    color: #131313;
+    margin-left: 20px;
+}
+
+.love-enjoy-features-info {
+    width: 586px;
+    height: 78px;
+    color: #727272;
+    font-weight: 400;
+    font-size: 16px;
+    margin-bottom: 30px;
+}
+
+/* .features-title-info {
+    display: flex;
+    flex-direction: column;
+} */
+
+
+
+
+/*---------------------------- 
+love and enjoy description 
+-----------------------------*/
+.love-enjoy-description {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.06);
+    border-radius: 8px;
+    margin-bottom: 20px;
+    padding: 30px 30px;
+    color: #727272;
+    /* align-items: center; */
+}
+
+/*------------------------------ 
+love-enjoy-description-title 
+-------------------------------*/
+.love-enjoy-description-title {
+    font-weight: 600;
+    font-size: 20px;
+    color: #131313;
+    margin-bottom: 10px;
+}
+
+/*------------------------------ 
+love-enjoy-description-info 
+-------------------------------*/
+.love-enjoy-description-info {
+    width: 514px;
+    height: 78px;
+    font-weight: 400;
+    font-size: 16px;
+    color: #727272;
+}
+
+/*-------------------------- 
+love and enjoy image 
+---------------------------*/
+.love-enjoy-image {
+    margin-left: 150px;
+    width: 100%;
+    align-self: stretch;
+}
+
+/*--------------------------------- 
+love and enjoy section button 
+----------------------------------*/
+.love-enjoy-button {
+    position: relative;
+    left: 100px;
+    bottom: 100px;
+    width: 340px;
+    height: 200px;
+}
+
+/*--------------------------- 
+styling some facts section 
+-----------------------------*/
+
+
+.some-facts-title-info {
+    position: relative;
+    left: 240px;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    /* align-items: center; */
+
+}
+
+/*--------------------- 
+some facts title  
+---------------------*/
+.some-facts-title {
+    font-weight: 700;
+    font-size: 45px;
+    color: #131313;
+    margin-bottom: 24px;
+}
+
+/*-------------------- 
+some facts info 
+--------------------*/
+.some-facts-info {
+    font-weight: 400;
+    font-size: 16px;
+    margin-bottom: 100px;
+}
+
+/*----------------------------- 
+some facts achievements  
+-----------------------------*/
+.achievements {
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 130px;
+    /* text-align: center; */
+
+
+}
+
+/*---------------------- 
+achievements-so-far 
+-----------------------*/
+.achievements-so-far {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid #FF900E;
+    border-radius: 8px;
+    padding: 40px;
+    width: 241.83px;
+    height: 241.83px;
+    transition: transform 1s;
+    /* justify-content: space-between; */
+}
+
+.achievements-so-far:hover {
+    background-color: beige;
+    transform: scale(1.5);
+}
+
+/*-------------------- 
+Achievement Score 
+---------------------*/
+.achievement-score {
+    font-weight: 600;
+    font-size: 45px;
+    color: #424242;
+    text-align: center;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+/*--------------------------- 
+Some facts Achievement title  
+-----------------------------*/
+.achievement-title {
+    font-weight: 600;
+    font-size: 20px;
+    color: #727272;
+}
+
+/*--------------------------------- 
+Styling the target section  
+---------------------------------*/
+
+/*------------------------- 
+Future Target section 
+--------------------------*/
+.target {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 150px;
+}
+
+/*---------------------------- 
+Target future main 
+-----------------------------*/
+.target-future-main {
+    width: 573px;
+
+}
+
+/*------------------- 
+Target future  
+--------------------*/
+.target-future {
+    border: 1px solid red;
+    /* width: 50%; */
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+}
+
+/*------------------ 
+Target image  
+------------------*/
+.target-image {
+    width: 573px;
+    margin-bottom: 10px;
+}
+
+/*---------------------- 
+target future title  
+-----------------------*/
+.target-future-main-title {
+    font-weight: 700;
+    font-size: 45px;
+    color: #131313;
+    margin-bottom: 24px;
+}
+
+/*-------------------------- 
+target-future-title-info  
+--------------------------*/
+.target-future-title-info {
+    width: 573px;
+    height: 78px;
+    font-weight: 400;
+    font-size: 16px;
+    color: #727272;
+}
+
+/*---------------------------- 
+better-target-future grid layout images  
+----------------------------*/
+.better-target-future {
+    width: 707px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 50px;
+    margin-left: 150px;
+
+}
+
+
+/*----------------------------- 
+Styling our sponsors  
+-----------------------------*/
+.sponsors {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 150px;
+}
+
+/*-------------------- 
+sponsors title  
+--------------------*/
+.sponsors-title {
+    font-weight: 700;
+    font-size: 45px;
+    margin-bottom: 24px;
+    /* text-align: center; */
+
+}
+
+/*----------------------- 
+sponsors title info  
+-------------------------*/
+.sponsors-info {
+    width: 542px;
+    height: 52px;
+    font-weight: 400;
+    font-size: 16px;
+    color: #727272;
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+/*------------------ 
+Sponsors images  
+-------------------*/
+.sponsor-images {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* margin-right: 155px; */
+}
+
+/*-------------------------------- 
+styling individual sponsor image  
+---------------------------------*/
+.dark-image,
+.grey-image {
+    mix-blend-mode: luminosity;
+    margin-right: 155px;
+}
+
+/*------------------
+making images dark  
+--------------------*/
+.grey-image {
+    /* fill: #727272; */
+    background-color: grey;
+    mix-blend-mode: luminosity;
+
+
+    /* mix-blend-mode: darken; */
+}
+
+.grey-image img {
+    mix-blend-mode: luminosity;
+
+}
+
+
+/*---------------------------- 
+Styling the footer section  
+-----------------------------*/
+.footer {
+    background: #FFF4E7;
+    border-radius: 8px;
+}
+
+/*---------------- 
+footer info  
+----------------*/
+.footer-info {
+    font-weight: 400;
+    font-size: 24px;
+    color: #424242;
+    text-align: center;
+    padding-top: 30px;
+    padding-bottom: 30px;
+
+}
+
+/*------------------------------------------------------------------------------------------ 
+Writing media query codes  
+--------------------------------------------------------------------------------------------*/
+@media screen and (max-width:576px) {
+    .header-title-nav {
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .nav-bar ul {
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .header-title {
+        font-size: 1.5em;
+
+    }
+
+    .banner-title {
+        font-size: 2em;
+        margin-bottom: 50px;
+
+
+    }
+
+    .banner-info {
+        width: 100%;
+        height: 52px;
+        font-size: 1em;
+    }
+
+    .banner-image {
+        width: 100%;
+    }
+
+    .features {
+        flex-direction: column;
+        margin-top: 50px;
+    }
+
+    .features-images {
+        margin: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+    }
+
+    .features-title {
+        margin-left: 0 !important;
+        width: 100%;
+    }
+
+    .love-enjoy-main {
+        justify-content: center;
+
+    }
+
+    .orange-box {
+        visibility: hidden;
+    }
+
+    .features-info {
+        width: 100%;
+        height: fit-content;
+    }
+
+    .love-enjoy-description {
+        width: 100%;
+        height: fit-content;
+        /* align-items: center; */
+    }
+
+    .love-enjoy {
+        flex-direction: column-reverse;
+
+    }
+
+    .love-enjoy-title {
+        flex-direction: column;
+    }
+
+    .love-enjoy-description-title {
+        width: 50%;
+        font-size: 1.5em;
+
+    }
+
+    .love-enjoy-description-info {
+        width: 50%;
+    }
+
+    .love-enjoy-image {
+        margin-left: 0 !important;
+        width: 100%;
+        align-self: unset;
+    }
+
+    .love-enjoy-button {
+        left: 0;
+        bottom: 0;
+        width: 200px;
+        height: 64px;
+        font-weight: 600;
+        font-size: 20px !important;
+        margin-bottom: 50px;
+    }
+
+    .primary-button {
+        margin-top: 50px;
+    }
+    
+    .love-enjoy-info {
+        width: 100%;
+        height: fit-content;
+
+
+    }
+
+    
+
+
+
 }
