--- a/styles/styles.css
+++ b/styles/styles.css
@@ -32,21 +32,8 @@
     color: #131313;
 }
 
-.nav-bar {
-    /* width: 50%; */
-
-    border: 1px solid red;
-    /* font-weight: 500;
-    font-size: 18px;
-    line-height: 26px; */
-    /* text-align: center; */
-
-
-    /* width: 50%; */
-}
 
 .nav-bar ul {
-    border: 1px solid gray;
     width: stretch;
     display: flex;
 }
@@ -164,7 +151,6 @@ Features section
 Features info 
 ------------------*/
 .features-info {
-    border: 1px solid orange;
     width: 540px;
     height: 80px;
     font-weight: 400;
@@ -190,6 +176,7 @@ Love-enjoy section
     /* justify-content: center; */
     align-items: center;
     margin-bottom: 130px;
+
 }
 
 /*-------------- 
@@ -292,8 +279,8 @@ love and enjoy image
 ---------------------------*/
 .love-enjoy-image {
     margin-left: 150px;
-    width: 100%;
-    align-self: stretch;
+    /* width: 100%; */
+    /* align-self: stretch; */
 }
 
 /*--------------------------------- 
@@ -421,7 +408,6 @@ Target future main
 Target future  
 --------------------*/
 .target-future {
-    border: 1px solid red;
     /* width: 50%; */
     display: flex;
     flex-direction: column;
@@ -572,11 +558,23 @@ Writing media query codes
         justify-content: center;
         align-items: center;
     }
+    .nav-bar{
+        width: 100%;
+        margin: auto;
+    }
+    .nav-bar ul{
+        padding: 0;
+        border: 0;
+    }
+    .nav-title{
+        margin-left: 0;
+    }
 
     .nav-bar ul {
+        width: 100%;
         flex-direction: column;
-        justify-content: space-around;
-        align-items: center;
+        justify-content: flex-start;
+        align-items: flex-start;
     }
 
     .header-title {
@@ -635,6 +633,10 @@ Writing media query codes
     }
 
     .love-enjoy-description {
+        margin-left: auto;
+        margin-right: auto;
+        padding-left: 0px;
+        padding-right: 0px;
         width: 100%;
         height: fit-content;
         /* align-items: center; */
@@ -642,6 +644,8 @@ Writing media query codes
 
     .love-enjoy {
         flex-direction: column-reverse;
+        /* justify-content: flex-start;
+        align-items: flex-start; */
 
     }
 
@@ -650,29 +654,30 @@ Writing media query codes
     }
 
     .love-enjoy-description-title {
-        width: 50%;
-        font-size: 1.5em;
+        width: 100%;
+        height: fit-content;
+        /* font-size: 1.5em; */
 
     }
 
     .love-enjoy-description-info {
-        width: 50%;
+        width: 100%;
+        height: fit-content;
     }
 
     .love-enjoy-image {
-        margin-left: 0 !important;
-        width: 100%;
-        align-self: unset;
+        margin-left: auto !important;
+        max-width: 100%;
+        /* align-self: initial; */
     }
 
     .love-enjoy-button {
         left: 0;
         bottom: 0;
-        width: 200px;
-        height: 64px;
-        font-weight: 600;
-        font-size: 20px !important;
-        margin-bottom: 50px;
+        width: 100%;
+        height: fit-content;
+        margin-bottom: 25px;
+        margin-bottom: 25px;
     }
 
     .primary-button {
@@ -685,6 +690,128 @@ Writing media query codes
 
 
     }
+    .love-enjoy-features-info {
+        width: 100%;
+        height: fit-content;
+        
+    }
+    .love-enjoy-features-title {
+        width: 100%;
+        height: fit-content;
+        margin: auto !important;
+        
+    }
+    .some-facts-title-info {
+        left: 0px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        /* justify-content: center; */
+        /* align-items: center; */
+    
+    }
+    .some-facts-info {
+        width: 100%;
+        height: fit-content;
+        margin-bottom: 25px;
+        text-align: center;
+    }
+    .some-facts{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .achievements{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .achievements-so-far{
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 100%;
+        margin-bottom: 80px;
+
+    }
+    .target {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .target-future {
+        
+        justify-content: center;
+        align-items: center;
+    }
+    .better-target-future {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-left: 0;
+        margin-top: 50px;
+    
+    
+    }
+    .target-image {
+        max-width: 60%;
+        /* height: fit-content; */
+
+        margin: auto;
+        
+    }
+    .target-future-main-title {
+        width: 100%;
+        height: auto;
+        text-align: center;
+    }
+    .target-future-title-info {
+        width: 60%;
+        height: auto;
+        margin-left: 0;
+        margin-right: 0;
+        margin-bottom: 25px;
+        text-align: center;
+        
+    }
+    
+    .target-future-info{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .target-future-info-image{
+        max-width: 100%;
+
+    }
+    .target-future-title{
+        text-align: center;
+        width: 100%;
+    }
+
+    /* Our sponsors  
+    ----------------*/
+    .sponsors{
+        margin-bottom: 20px;
+    }
+    .sponsors-title, .sponsors-info{
+        max-width: 100%;
+        height: auto;
+
+    }
+    .sponsor-images{
+        flex-direction: column;
+        
+    }
+    .grey-image, .dark-image{
+        margin-right: 0;
+        margin-bottom: 30px;
+    }
+    
+    
 
     
 
