--- a/styles/styles.css
+++ b/styles/styles.css
@@ -280,7 +280,7 @@ love and enjoy image
 .love-enjoy-image {
     margin-left: 150px;
     /* width: 100%; */
-    /* align-self: stretch; */
+    align-self: stretch;
 }
 
 /*--------------------------------- 
